--- a/public/home.html
+++ b/public/home.html
@@ -145,6 +145,7 @@
         </div>
         
         <div class="links">
+            <a href="/app" class="link-button">🚀 Launch App</a>
             <a href="/api-docs" class="link-button">📚 Documentação da API</a>
             <a href="/api/health" class="link-button">💚 Health Check</a>
             <a href="https://github.com/leolech14/media" class="link-button">💻 GitHub</a>
