--- a/public/landing.html
+++ b/public/landing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social AI Pro</title>
     <meta name="description" content="Transform text into engaging educational videos with AI">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='50%' x='50%' text-anchor='middle' font-size='80'>🎬</text></svg>">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='50%' x='50%' text-anchor='middle' font-size='80'>AI</text></svg>">
     <style>
         * {
             margin: 0;
@@ -126,7 +126,7 @@
             position: relative;
             z-index: 1;
             text-align: center;
-            max-width: 600px;
+            max-width: 1200px;
             padding: 2rem;
         }
 
@@ -319,7 +319,7 @@
     <!-- Main content -->
     <main class="container">
         <div class="logo" role="img" aria-label="Social AI Pro logo">
-            🎬
+            
         </div>
 
         <div class="search-container">
